--- a/pkg/android/phoenix/assets/overlays/gamepads/neo-retropad/neo-retropad.cfg
+++ b/pkg/android/phoenix/assets/overlays/gamepads/neo-retropad/neo-retropad.cfg
@@ -225,8 +225,8 @@ overlay0_desc28_overlay = "png/default/hotkey_hide.png"
 overlay0_desc28_reach_x = 1.6
 overlay0_desc28_reach_y = 1.6
 
-overlay0_desc29 = "menu_toggle2,0.90645161290322584513,0.95602294455066916257,radial,0.02150537634408602322,0.03824091778202676900"
-overlay0_desc29_overlay = "png/default/hotkey_menu2.png"
+overlay0_desc29 = "menu_toggle,0.90645161290322584513,0.95602294455066916257,radial,0.02150537634408602322,0.03824091778202676900"
+overlay0_desc29_overlay = "png/default/hotkey_menu.png"
 overlay0_desc29_reach_x = 1.6
 overlay0_desc29_reach_y = 1.6
 
@@ -365,8 +365,8 @@ overlay1_desc17_overlay = "png/default/hotkey_hide.png"
 overlay1_desc17_reach_x = 1.6
 overlay1_desc17_reach_y = 1.6
 
-overlay1_desc18 = "menu_toggle2,0.90645161290322584513,0.95602294455066916257,radial,0.02150537634408602322,0.03824091778202676900"
-overlay1_desc18_overlay = "png/default/hotkey_menu2.png"
+overlay1_desc18 = "menu_toggle,0.90645161290322584513,0.95602294455066916257,radial,0.02150537634408602322,0.03824091778202676900"
+overlay1_desc18_overlay = "png/default/hotkey_menu.png"
 overlay1_desc18_reach_x = 1.6
 overlay1_desc18_reach_y = 1.6
 
@@ -574,8 +574,8 @@ overlay4_desc28_overlay = "png/default/hotkey_hide.png"
 overlay4_desc28_reach_x = 1.6
 overlay4_desc28_reach_y = 1.6
 
-overlay4_desc29 = "menu_toggle2,0.53824091778202676206,0.56451612903225811824,radial,0.03824091778202676900,0.02150537634408602322"
-overlay4_desc29_overlay = "png/default/hotkey_menu2.png"
+overlay4_desc29 = "menu_toggle,0.53824091778202676206,0.56451612903225811824,radial,0.03824091778202676900,0.02150537634408602322"
+overlay4_desc29_overlay = "png/default/hotkey_menu.png"
 overlay4_desc29_reach_x = 1.6
 overlay4_desc29_reach_y = 1.6
 overlay4_desc29_exclusive = true
@@ -711,8 +711,8 @@ overlay5_desc17_overlay = "png/default/hotkey_hide.png"
 overlay5_desc17_reach_x = 1.6
 overlay5_desc17_reach_y = 1.6
 
-overlay5_desc18 = "menu_toggle2,0.53824091778202676206,0.56451612903225811824,radial,0.03824091778202676900,0.02150537634408602322"
-overlay5_desc18_overlay = "png/default/hotkey_menu2.png"
+overlay5_desc18 = "menu_toggle,0.53824091778202676206,0.56451612903225811824,radial,0.03824091778202676900,0.02150537634408602322"
+overlay5_desc18_overlay = "png/default/hotkey_menu.png"
 overlay5_desc18_reach_x = 1.6
 overlay5_desc18_reach_y = 1.6
 overlay5_desc18_exclusive = true
