--- a/pkg/android/phoenix/assets/retroarch.cfg
+++ b/pkg/android/phoenix/assets/retroarch.cfg
@@ -2835,7 +2835,7 @@ materialui_landscape_layout_optimization = "0"
 materialui_menu_color_theme = "9"
 materialui_menu_transition_animation = "0"
 materialui_playlist_icons_enable = "true"
-materialui_show_nav_bar = "false"
+materialui_show_nav_bar = "true"
 materialui_switch_icons = "true"
 materialui_thumbnail_background_enable = "true"
 materialui_thumbnail_view_landscape = "2"
