change quick menu
change quick menu

--- a/pkg/android/phoenix/assets/retroarch.cfg
+++ b/pkg/android/phoenix/assets/retroarch.cfg
@@ -57,11 +57,11 @@ bundle_assets_extract_enable = "true"
 bundle_assets_extract_last_version = "1711589523"
 bundle_assets_extract_version_current = "1711589523"
 bundle_assets_src_path = "/data/user/0/org.kuyo.game/virtual/data/app/com.retroarch.aarch64/base.apk"
-cache_directory = "/storage/emulated/0/RetroArch/temp"
+cache_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/temp"
 camera_allow = "false"
 camera_device = ""
 camera_driver = "android"
-cheat_database_path = "/storage/emulated/0/RetroArch/cheats"
+cheat_database_path = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/cheats"
 check_firmware_before_loading = "false"
 cheevos_appearance_anchor = "0"
 cheevos_appearance_padding_auto = "true"
@@ -122,7 +122,7 @@ content_show_settings = "true"
 content_show_settings_password = ""
 content_video_directory = "default"
 content_video_history_path = "/storage/emulated/0/Android/data/com.retroarch.aarch64/files/content_video_history.lpl"
-core_assets_directory = "/storage/emulated/0/RetroArch/downloads"
+core_assets_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/downloads"
 core_info_cache_enable = "true"
 core_info_savestate_bypass = "false"
 core_option_category_enable = "true"
@@ -1391,7 +1391,7 @@ input_player1_a = "x"
 input_player1_a_axis = "nul"
 input_player1_a_btn = "nul"
 input_player1_a_mbtn = "nul"
-input_player1_analog_dpad_mode = "0"
+input_player1_analog_dpad_mode = "1"
 input_player1_b = "z"
 input_player1_b_axis = "nul"
 input_player1_b_btn = "nul"
@@ -1538,7 +1538,7 @@ input_player2_a = "nul"
 input_player2_a_axis = "nul"
 input_player2_a_btn = "nul"
 input_player2_a_mbtn = "nul"
-input_player2_analog_dpad_mode = "0"
+input_player2_analog_dpad_mode = "1"
 input_player2_b = "nul"
 input_player2_b_axis = "nul"
 input_player2_b_btn = "nul"
@@ -2725,7 +2725,7 @@ input_recording_toggle_axis = "nul"
 input_recording_toggle_btn = "nul"
 input_recording_toggle_mbtn = "nul"
 input_remap_binds_enable = "true"
-input_remapping_directory = "/storage/emulated/0/RetroArch/config/remaps"
+input_remapping_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/config/remaps"
 input_replay_slot_decrease = "nul"
 input_replay_slot_decrease_axis = "nul"
 input_replay_slot_decrease_btn = "nul"
@@ -2824,7 +2824,7 @@ libretro_log_level = "1"
 load_dummy_on_core_shutdown = "true"
 location_allow = "false"
 location_driver = "android"
-log_dir = "/storage/emulated/0/RetroArch/logs"
+log_dir = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/logs"
 log_to_file = "false"
 log_to_file_timestamp = "false"
 log_verbosity = "false"
@@ -3012,7 +3012,7 @@ pause_nonactive = "true"
 pause_on_disconnect = "false"
 perfcnt_enable = "false"
 playlist_compression = "false"
-playlist_directory = "/storage/emulated/0/RetroArch/playlists"
+playlist_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/playlists"
 playlist_entry_remove_enable = "1"
 playlist_entry_rename = "true"
 playlist_fuzzy_archive_match = "false"
@@ -3035,7 +3035,7 @@ quick_menu_show_controls = "true"
 quick_menu_show_core_options_flush = "false"
 quick_menu_show_download_thumbnails = "true"
 quick_menu_show_information = "false"
-quick_menu_show_options = "false"
+quick_menu_show_options = "true"
 quick_menu_show_replay = "false"
 quick_menu_show_reset_core_association = "true"
 quick_menu_show_restart_content = "true"
@@ -3049,8 +3049,8 @@ quick_menu_show_set_core_association = "true"
 quick_menu_show_shaders = "false"
 quick_menu_show_start_recording = "true"
 quick_menu_show_start_streaming = "true"
-quick_menu_show_take_screenshot = "false"
-quick_menu_show_undo_save_load_state = "true"
+quick_menu_show_take_screenshot = "true"
+quick_menu_show_undo_save_load_state = "false"
 quit_on_close_content = "0"
 quit_press_twice = "true"
 record_driver = "null"
@@ -3072,7 +3072,7 @@ rgui_background_filler_thickness_enable = "true"
 rgui_border_filler_enable = "true"
 rgui_border_filler_thickness_enable = "true"
 rgui_browser_directory = "default"
-rgui_config_directory = "/storage/emulated/0/RetroArch/config"
+rgui_config_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/config"
 rgui_extended_ascii = "false"
 rgui_inline_thumbnails = "false"
 rgui_internal_upscale_level = "0"
@@ -3092,12 +3092,12 @@ run_ahead_hide_warnings = "false"
 run_ahead_secondary_instance = "true"
 runtime_log_directory = "default"
 save_file_compression = "false"
-savefile_directory = "/storage/emulated/0/RetroArch/saves"
+savefile_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/saves"
 savefiles_in_content_dir = "false"
 savestate_auto_index = "false"
 savestate_auto_load = "false"
 savestate_auto_save = "false"
-savestate_directory = "/storage/emulated/0/RetroArch/states"
+savestate_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/states"
 savestate_file_compression = "true"
 savestate_max_keep = "0"
 savestate_thumbnail_enable = "false"
@@ -3106,7 +3106,7 @@ scan_serial_and_crc = "false"
 scan_without_core_match = "false"
 screen_brightness = "100"
 screen_orientation = "0"
-screenshot_directory = "/storage/emulated/0/RetroArch/screenshots"
+screenshot_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/screenshots"
 screenshots_in_content_dir = "false"
 settings_show_accessibility = "true"
 settings_show_achievements = "true"
@@ -3147,7 +3147,7 @@ sustained_performance_mode = "false"
 system_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/system"
 systemfiles_in_content_dir = "false"
 threaded_data_runloop_enable = "true"
-thumbnails_directory = "/storage/emulated/0/RetroArch/thumbnails"
+thumbnails_directory = "/data/user/0/org.kuyo.game/virtual/data/user/0/com.retroarch.aarch64/thumbnails"
 twitch_stream_key = ""
 ui_companion_enable = "false"
 ui_companion_start_on_boot = "true"
